# Quantum-regime-engine

./: .gitignore  CHANGELOG.md  EXPLAINED_SIMPLE.md  GITHUB_SETUP.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  dashboard.py  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  run_dashboard.bat
.streamlit/: config.toml
notebooks/: walkthrough.ipynb
scripts/: verify.py
src/regime_engine/: __init__.py  backtest.py  cli.py  dashboard_app.py  data.py  hmm_detector.py  interactive_charts.py  pipeline.py  quantum_opt.py  sectors.py  strategies.py  visualize.py
tests/: test_smoke.py
